--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = smartscan
 version = attr: smartscan.__version__
 author = Steinn Ymir Agustsson
-author_email = agustsson@phys.au.dkaddress
+author_email = agustsson@phys.au.dk
 url = https://github.com/ARPES-ASTRID/smartscan
 description = A package for controlling nanoARPES scanning using machine learning
 long_description = file: README.md
@@ -21,12 +21,7 @@ install_requires =
     numpy >= 1.24
     xarray >= 2023.2
     tqdm >= 4.64
-    scikit-learn >= 1.2
-    scipy >= 1.10
     h5py >= 3.8
-    torch >=1.12
-    torch_dct
-
 
 [options.extras_require]
 notebook =
