--- a/env.yml
+++ b/env.yml
@@ -3,12 +3,16 @@ channels:
   - conda-forge
 dependencies:
   - python = 3.10
-  - numpy >= 1.24.*
+  - numpy >= 1.25.*
   - xarray >= 2023.2.*
+  - scipy >= 1.7.*
   - tqdm >= 4.64.*
   - matplotlib >= 3.7.*
   - ipykernel >= 6.21.*
   - ipympl >= 0.9.*
   - ipywidgets
   - pip
-  
+  - pip:
+    - gpcam == 7.4.10
+    - fvgp == 3.3.8
+    - hgdl ==2.0.7
