--- a/scan_settings.yaml
+++ b/scan_settings.yaml
@@ -36,24 +36,28 @@ preprocessing:
   #   function: reshape 
   #   params: 
   #     shape: [] # parameters of the function
-  roi:
-    function: roi # name of the function found in gp/preprocessing.py
-    params: 
-      x_lim: [50,190] # parameters of the function  
-      y_lim: [10,-10]
+  # roi:
+  #   function: roi # name of the function found in gp/preprocessing.py
+  #   params: 
+  #     x_lim: [50,190] # parameters of the function  
+  #     y_lim: [10,-10]
 
 tasks: # list of tasks to which to reduce the data
-  mean: # name of the task found in gp/tasks.py
-    function: mean # name of the function
-    params: null # parameters of the function
   laplace_filter:
     function: laplace_filter
     params:
       sigma: 5
       norm: False
-  # signal_to_bg:
-  #   function: signal_to_bg
-  #   params: null
+      roi: [[50, 110], [10, 140]]
+  contrast_noise_ratio:
+    function: contrast_noise_ratio
+    params: 
+      signal_roi: [[50, 110], [10, 140]]
+      bg_roi: [[150,200], [50, 100]]
+  mean: # name of the task found in gp/tasks.py
+    function: mean # name of the function
+    params: 
+      roi: [[50, 110], [10, 140]]
 
 acquisition_function:
   function: acquisition_function_nd # name of the function found in gp/acquisition_functions.py
