--- a/scan_settings.yaml
+++ b/scan_settings.yaml
@@ -5,7 +5,7 @@ TCP:
   timeout: 10 # seconds
 
 logging:
-  level: INFP
+  level: INFO
   directory: null
   formatter: '%(asctime)s | %(name)s | %(levelname)-8s | %(message)s'
 
