--- a/scan_settings.yaml
+++ b/scan_settings.yaml
@@ -49,11 +49,11 @@ tasks: # list of tasks to which to reduce the data
       sigma: 5
       norm: False
       roi: [[50, 190], [10, 140]]
-  contrast_noise_ratio:
-    function: contrast_noise_ratio
-    params: 
-      signal_roi: [[50, 190], [10, 140]]
-      bg_roi: [[150,200], [50, 100]]
+  # contrast_noise_ratio:
+  #   function: contrast_noise_ratio
+  #   params: 
+  #     signal_roi: [[50, 190], [10, 140]]
+  #     bg_roi: [[150,200], [50, 100]]
   mean: # name of the task found in gp/tasks.py
     function: mean # name of the function
     params: 
@@ -73,7 +73,7 @@ cost_function:
     speed: 300 # um/s
     dwell_time: 2 # seconds
     dead_time: 0.1 # seconds
-    min_distance: 4.99 # This should always be just below the step size of the scanner
+    min_distance: 1.99 # This should always be just below the step size of the scanner
     weight: 0.01 # weight of the cost function
 
 gp:
