--- a/scan_settings.yaml
+++ b/scan_settings.yaml
@@ -29,6 +29,7 @@ scanning:
   normalize_values: training # one of init, training, always, fixed or never
   fixed_normalization: [1.0, 1.0] # normalization factors for each task
   merge_unique_positions: true
+  base_error: 0.01 # 1% error
   
 preprocessing: 
 # list of preprocessing functions to apply to the data. 
