add initialization points options

--- a/scan_settings.yaml
+++ b/scan_settings.yaml
@@ -30,6 +30,8 @@ scanning:
   fixed_normalization: [1.0, 1.0] # normalization factors for each task
   merge_unique_positions: true
   base_error: 0.01 # 1% error
+  initial_points_2D: hexgrid_19
+  initial_points_3D: border_25
   
 preprocessing: 
 # list of preprocessing functions to apply to the data. 
