set up acquisition function batch and push version

--- a/scan_settings.yaml
+++ b/scan_settings.yaml
@@ -22,8 +22,8 @@ plots:
   posterior_map_shape: [50,50] #full #"auto"
 
 scanning:
-  max_points: 750 # 0 for unlimited
-  duration: 1_000_000
+  max_points: 1000 # 0 for unlimited
+  duration: 3600
   train_at: [10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000]
   train_every: 0 # 0 for no training
   normalize_values: training # one of init, training, always, fixed or never
