--- a/scan_settings.yaml
+++ b/scan_settings.yaml
@@ -30,7 +30,7 @@ scanning:
   fixed_normalization: [1.0, 1.0] # normalization factors for each task
   merge_unique_positions: true
   base_error: 0.01 # 1% error
-  initial_points: grid_3D_27
+  initial_points: hexgrid_2D_19 # grid_3D_27
   
 preprocessing: 
 # list of preprocessing functions to apply to the data. 
@@ -73,7 +73,7 @@ tasks: # list of tasks to which to reduce the data
 acquisition_function:
   function: acquisition_function_nd # name of the function found in gp/acquisition_functions.py
   params:
-    a: 50 # exploration vs exploitation, i.e. variance weight
+    a: 1 # exploration vs exploitation, i.e. variance weight
     weights: null
     norm: 1 # normalization factor for acquisition function
     c: 0 # covariance weight
@@ -81,11 +81,11 @@ acquisition_function:
 cost_function:
   function: cost_per_axis # manhattan_avoid_repetition # name of the function found in gp/cost_functions.py
   params: 
-    speed: [0, 300,300] # um/s, 0 speed is infinite
+    speed: [300,300] # um/s, 0 speed is infinite
     # dwell_time: 2 # seconds
     # dead_time: 0.1 # seconds
     # min_distance: 4.99 # This should always be just below the step size of the scanner
-    weight: [0, .01,.01] # 0.01 # weight of the cost function
+    weight: [100,100] # 0.01 # weight of the cost function
 
 gp:
   optimizer:
@@ -96,7 +96,7 @@ gp:
       1_000_000, 
       100, 
       100, 
-      100, 
+      # 100, 
       0.5
     ]
     compute_device: cpu # cpu or cuda:0
@@ -110,7 +110,7 @@ gp:
       [1_000_000, 1_000_000_000],
       [1, 50_000],
       [10, 50_000],
-      [10, 50_000],
+      # [10, 50_000],
       [0.001, 5000]
     ]
     pop_size: 20 # population size for global optimization
