add dev dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,3 +36,9 @@ notebook =
     ipykernel >= 6.21
     ipympl >= 0.9
     ipywidgets
+
+dev =
+    pytest >= 6.2
+    pre-commit >= 2.15
+    black >= 21.12
+    ruff >= 0.1
